--- a/templates/users/index.html
+++ b/templates/users/index.html
@@ -26,7 +26,7 @@
               <form method="POST" action="/users/stop-following/{{ user.id }}">
                 <button class="btn btn-primary btn-sm">Unfollow</button>
               </form>
-              {% else %}
+              {% elif g.user is ne user %}
               <form method="POST" action="/users/follow/{{ user.id }}">
                 <button class="btn btn-outline-primary btn-sm">Follow</button>
               </form>
