--- a/templates/home.html
+++ b/templates/home.html
@@ -50,14 +50,19 @@
           <p>{{ msg.text }}</p>
         </div>
         {% if msg.user is ne g.user %}
-        <form method="POST" action="/users/add_like/{{ msg.id }}" id="messages-form">
-          <button class="
-                btn 
-                btn-sm 
-                {{'btn-primary' if msg.id in likes else 'btn-secondary'}}">
+        {% if msg.id in likes %}
+        <form method="POST" action="/users/remove_like/{{ msg.id }}" id="messages-form">
+          <button class="btn btn-sm btn-primary">
             <i class="fa fa-thumbs-up"></i>
           </button>
         </form>
+        {% else %}
+        <form method="POST" action="/users/add_like/{{ msg.id }}" id="messages-form">
+          <button class="btn btn-sm btn-secondary">
+            <i class="fa fa-thumbs-up"></i>
+          </button>
+        </form>
+        {% endif %}
         {% endif %}
       </li>
       {% endfor %}
