--- a/templates/messages/show.html
+++ b/templates/messages/show.html
@@ -31,16 +31,22 @@
           </div>
           <p class="single-message">{{ message.text }}</p>
           {% if message.user is ne user %}
-            <form method="POST" action="/users/add_like/{{ message.id }}">
-              <span class="text-muted">{{ message.timestamp.strftime('%d %B %Y') }}</span>
-              <button class="
-                  btn 
-                  btn-sm 
-                  {{'btn-primary' if message.id in likes else 'btn-secondary'}}">
-                <i class="fa fa-thumbs-up"></i>
-              </button>
-            </form>
-            {% endif %}
+          {% if message.id in likes %}
+          <form method="POST" action="/users/remove_like/{{ message.id }}">
+            <span class="text-muted">{{ message.timestamp.strftime('%d %B %Y') }}</span>
+            <button class="btn btn-sm btn-primary">
+              <i class="fa fa-thumbs-up"></i>
+            </button>
+          </form>
+          {% else %}
+          <form method="POST" action="/users/add_like/{{ message.id }}">
+            <span class="text-muted">{{ message.timestamp.strftime('%d %B %Y') }}</span>
+            <button class="btn btn-sm btn-secondary">
+              <i class="fa fa-thumbs-up"></i>
+            </button>
+          </form>
+          {% endif %}
+          {% endif %}
         </div>
       </li>
     </ul>
