--- a/templates/users/show.html
+++ b/templates/users/show.html
@@ -18,14 +18,19 @@
         <p>{{ message.text }}</p>
       </div>
       {% if message.user is ne g.user %}
-      <form method="POST" action="/users/add_like/{{ message.id }}" id="messages-form">
-        <button class="
-                btn 
-                btn-sm 
-                {{'btn-primary' if message.id in likes else 'btn-secondary'}}">
+      {% if message.id in likes %}
+      <form method="POST" action="/users/remove_like/{{ message.id }}" id="messages-form">
+        <button class="btn btn-sm btn-primary">
           <i class="fa fa-thumbs-up"></i>
         </button>
       </form>
+      {% else %}
+      <form method="POST" action="/users/add_like/{{ message.id }}" id="messages-form">
+        <button class="btn btn-sm btn-secondary">
+          <i class="fa fa-thumbs-up"></i>
+        </button>
+      </form>
+      {% endif %}
       {% endif %}
     </li>
 
