--- a/templates/users/show.html
+++ b/templates/users/show.html
@@ -17,6 +17,7 @@
         <span class="text-muted">{{ message.timestamp.strftime('%d %B %Y') }}</span>
         <p>{{ message.text }}</p>
       </div>
+      {% if g.user %}
       {% if message.user is ne g.user %}
       <form method="POST" action="/users/{{'remove_like' if message.id in likes else 'add_like'}}/{{ message.id }}"
         id="messages-form">
@@ -29,6 +30,14 @@
       <div id="messages-form">
         <span class="text-muted">{{ len(message.liked_by) }}</span>
         <button class="btn btn-sm btn-primary">
+          <i class="fa fa-thumbs-up"></i>
+        </button>
+      </div>
+      {% endif %}
+      {% else %}
+      <div id="messages-form">
+        <span class="text-muted">{{ len(message.liked_by) }}</span>
+        <button class="btn btn-sm btn-secondary">
           <i class="fa fa-thumbs-up"></i>
         </button>
       </div>
