--- a/templates/users/detail.html
+++ b/templates/users/detail.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div id="warbler-hero" class="full-width" style="background-image: url({{ user.header_image_url }});"></div>
-<img src="{{ user.image_url }}" alt="Image for {{ user.username }}" id="profile-avatar">
+<img src="{{ user.image_url }}" alt="{{ user.username }} image" id="profile-avatar">
 <div class="row full-width">
   <div class="container">
     <div class="row justify-content-end">
